[BEGIN TEST]: Testing what happens when a class that has a queue<Derived> member goes out of scope

--- a/CPP_Practice/CPP_Practice.vcxproj
+++ b/CPP_Practice/CPP_Practice.vcxproj
@@ -148,6 +148,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="A.h" />
+    <ClInclude Include="Algorithm.h" />
     <ClInclude Include="Base.h" />
     <ClInclude Include="Derived.h" />
     <ClInclude Include="IntegerPtr.h" />
